# zbench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_cm_kernels.py  dev_test.cpp  dev_test.h  driver_gemm_MADLSC.h  functions.cmake  setup.py  test_cpp_ext.py  test_flash_att.py  test_zbench_bind.py  torch_jit_ext.py  zbench-0.0.0-cp310-cp310-win_amd64.whl  zbench.cpp
bgemm/: PVCBGEMM.h  PVCBGEMM_genx.cpp  PVCBGEMM_ocl.cpp
cm_kernels/: GemmGenericNN_FP32.cpp  Sgemm_genx.cpp  bgemm_dpas_genx.cpp  gemm_nchw_dpas.cpp  gemm_nchw_fp16.cpp
cm_kernels/mha_test/: bmm_nchw_fp16.cpp
cm_kernels/vxm_test/: vxm_test_fp16.cpp  vxm_test_fp16_base.cpp  vxm_test_fp16_dpas.cpp  vxm_test_fp16_dpas_dev.cpp  vxm_test_fp16_row_maj.cpp  vxm_ut_dpas.cpp  vxm_ut_slm.cpp
cpp_ext_test/: test_cpp_ext.py
cpp_ext_test/cpp/: lltm.cpp
flash_att_dev/: flash_att_dev.py
rt_igdext/: cm_dispatcher.h  dx12_utils.h  gemm.h  layers_utils.h  rt_igdext.cpp  rt_igdext.h
rt_l0/: Matrix.h  Sgemm.cpp  cm_utils.h  l0_launch.cpp  l0_launch.h  l0_launch_model_shader.cpp  l0_rt_helpers.h  ocloc_helper.h  sgemm.h  share.h
sample/: CMakeLists.txt  host_l0.cpp  host_ocl.cpp  kernel.cpp
tests/: bmm_nchw_fp16.asm  bmm_nchw_fp16.cpp  bmm_nchw_fp16.py  bmm_nchw_fp16.visaasm  gemm_nchw_fp16.cpp  kernel_build.py  test_cpp_ext.py  test_model_gemm.py  test_model_gemv.py  test_model_mha.py  test_pyopencl.py  test_rt_igdext.py  test_zbench_bind.py  test_zbench_sample.py
tests/bmm_nchw_fp16/: test_bmm_nchw_fp16.py
tests/dev_bmm_nchw_fp16/: bmm_nchw_fp16.asm  test_bmm_nchw_fp16.py
tests/dev_flash_att/: dev_flash_att.cpp  dev_flash_att_q_kv.cpp  dev_flash_att_q_kv_tile_q.cpp  dev_flash_att_v0.cpp  dev_flash_decoding.cpp  dev_flash_decoding_split_kv.cpp  dummy_flash_att_test.py  dxdispatch_dump_data_llama2.py  dxdispatch_dump_data_sd.py  original_flash_att.py  test_flash_att_llm.py  test_flash_att_mc_shaders.py  test_flash_att_sd.py
tests/dev_flash_att/DxDispatchRelWithDebInfo/: dxdispatchImpl.exp  dxdispatchImpl.lib
tests/dev_flash_att/flash_att2_SD_json/: dml_mha_q_kv1024.json  dml_mha_q_kv256.json  dml_mha_q_kv4096.json  dml_mha_q_kv64.json  dml_mha_q_kv_small.json  dml_mha_q_kv_tile.json  dml_mha_qkv256.json  dml_mha_qkv4096.json  dml_mha_qkv64.json
tests/dev_flash_att/flash_att2_SD_json/tensor_file/: dml_mha_kv1024.npy  dml_mha_kv256.npy  dml_mha_kv64.npy  dml_mha_kv_small.npy  dml_mha_kv_tile.npy  dml_mha_q1024.npy  dml_mha_q256.npy  dml_mha_q_kv1024_output.npy  dml_mha_q_kv256_output.npy  dml_mha_q_kv64_output.npy  dml_mha_q_kv_tile_output.npy  dml_mha_q_tile.npy  kv1024_np_tensor.npy  kv256_np_tensor.npy  kv4096_np_tensor.npy  kv64_np_tensor.npy  kv_tile_np_tensor.npy  q1024_np_tensor.npy  q256_np_tensor.npy  q64_np_tensor.npy  q_tile_np_tensor.npy
tests/dev_flash_att/flash_att_dev/dummy_qkv/case_rand/: qkv_input.pt
tests/dev_flash_att/flash_decoding_json/: dml_gemm_llama2.json  dml_mha_q_k_v2048.json  dml_mha_q_k_v2048_output.npy  dml_mha_q_k_v2048_query.npy  dml_mha_q_k_v_1st_token_2048.json  dml_mha_q_k_v_2048.json  dml_mha_q_k_v_small.json  dml_mha_q_k_v_small_key.npy  dml_mha_q_k_v_small_output.npy  dml_mha_q_k_v_small_query.npy  dml_mha_q_k_v_small_value.npy  k_tensor_small.npy  new_dml_mha_q_k_v_1st_token_2048.json  new_dml_mha_q_k_v_1st_token_small.json  new_dml_mha_q_k_v_2048.json  new_dml_mha_q_k_v_small.json  output_tensor.npy  output_tensor_small.npy  q_tensor.npy  q_tensor_small.npy  v_tensor_small.npy
tests/dev_flash_att/mha_json/: dml_mha_q_kv1024.json  dml_mha_q_kv256.json  dml_mha_q_kv4096.json  dml_mha_q_kv64.json  dml_mha_qkv1024.json  dml_mha_qkv64.json
tests/dev_flash_att/shaders/: dev_flash_decoding_kv_tiling.cpp  dev_flash_decoding_no_kv_tiling.cpp  dev_flash_decoding_no_qkv_tiling_1st_token.cpp  dev_flash_decoding_q_tiling_1st_token.cpp  dev_flash_decoding_qkv_tiling_1st_token.cpp  dev_flash_decoding_split_kv_no_tiling.cpp  dev_flash_decoding_split_kv_tiling.cpp  mha_q_k_v_flash_1st_token.cpp  mha_q_k_v_flash_1st_token_tile_q.cpp  mha_q_k_v_flash_decoding.cpp  mha_q_k_v_flash_decoding_gqa.cpp
tests/dev_flash_att/shared_flash_att_code/: dev_flash_decoding_split_kv.cpp
tests/dev_gemm/: gemm_nchw_fp16.asm  gemm_nchw_fp16.cpp  gemm_nchw_fp16.visaasm  test_rt_igdext.py
tests/dev_online_softmax/: dev_online_softmax_nchw.cpp  online_softmax_nchw.cpp  original_online_softmax.py  softmax_nchw.cpp  test_softmax.py
tests/flash_att_dev/dummy_qkv/case_rand/: att_out.pt  used_params.txt
tests/flash_att_dev/dummy_qkv/case_sdxl/: att_out.pt  used_params.txt
tests/online_softmax/: bmm_nchw_fp16.asm  bmm_nchw_fp16.cpp  bmm_nchw_fp16.visaasm  test_softmax.py
tests/tested_shaders/: gemm_nchw_fp16.cpp
vadd_hello_l0/: vadd_genx.cpp  vadd_hello_l0.cpp
vadd_hello_ocl/: vadd_genx.cpp  vadd_hello_offline.cpp
zbench.egg-info/: PKG-INFO  SOURCES.txt
